Création de composant pour le paiement des cartes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -63,15 +63,7 @@
             <img src="./assets/images/cards/appel-play-icon1.png" alt="Appel Stroe Icon" srcset="" width="40px"
               height="30px">
           </div>
-          <p>Secured Payement Gateways</p>
-          <div class="payement-methode flex gap-10">
-            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
-            <img src="./assets/images/cards/master-card.png" alt="" srcset="" width="40px" height="30px">
-            <img src="./assets/images/cards/pay-pal.png" alt="" srcset="" width="40px" height="30px">
-            <!-- <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
-            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
-            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px"> -->
-          </div>
+          <app-payement-card></app-payement-card>
         </div>
       </div>
     </div>
