--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -15,6 +15,25 @@
   width: 100%;
   height: 100%;
 }
+.single-product-details h2 {
+  font-size: 3rem;
+  line-height: 40px;
+  margin: 0;
+}
+.single-product-view-details .single-product-view-details-price > h4 {
+  font-size: 2.3rem;
+  color: #3f51b5;
+}
+.single-product-view-details .single-product-view-details-price del,
+.single-product-view-details .single-product-view-details-price del h4 {
+  font-size: 2.1rem;
+  color: #3f51b5;
+}
+.single-product-view-details-created-at {
+  margin: 25px 0;
+  font-size: 1.1rem;
+}
+
 @media screen and (max-width: 900px) {
   .single-product {
     flex-direction: column-reverse;
