--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ body {
 }
 .btn {
   font-size: 1.2rem;
-  height: 40px;
+  height: 45px;
   background-color: #1d1d1d;
   border: none;
   min-width: 100%;
@@ -72,6 +72,9 @@ body {
   font-weight: bold;
   padding: 0 5px;
   box-shadow: 0 3px 5px -1px #0003, 0.6px 10px #00000024, 0 1px 18px #0000001f;
+}
+.btn-main {
+  background-color: #3f51b5;
 }
 .form-container {
   width: 500px;
