--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -27,8 +27,9 @@
       <h4>- {{product? (((product.regular_price - product.sold_price)/product.regular_price
         )|percent): null}}</h4>
     </div>
-    <div class="product-action-button flex">
-      <button class="btn flex-1 btn-main">Pay Now</button>
+    <div class="product-action-button flex column">
+      <button class="btn flex-1 btn-main">Pay Now</button><br>
+      <button class="btn flex-1 btn-main">Add to cart</button>
     </div>
     <div class="single-product-view-details-created-at">
       Crée le : 12/12/2025
@@ -36,3 +37,4 @@
     <app-payement-card></app-payement-card>
   </div>
 </div>
+<app-products-details></app-products-details>
