--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,10 @@ body {
   margin: 0 auto;
   min-height: 70vh;
 }
+.unlisted {
+  list-style: none;
+  padding: 0;
+}
 
 @media screen and (max-width: 1200px) {
   .content {
